# mnist_euslisp

./: .gitignore  README.md  activations.l  cblaslib.l  eus-cuda-matrix.l  mnist-draw.l  mnist.l  nn.l  nn.py  nn_class.py  plot-mnist-loss-accuracy.plt  plot.py
MATPROD/: Makefile  Makefile.Linux64
MATPROD/src/: matprod.c
eus_cuda_matrix/: CMakeLists.txt  README.md
eus_cuda_matrix/euslisp/: eus-cuda-matrix.l
eus_cuda_matrix/euslisp/misc/: compare-matrix-multiply.l  plot-compare-matrix-multiply-time.plt
eus_cuda_matrix/euslisp/test/: test-matrixMul.l  test-matrixMulCUBLAS.l
eus_cuda_matrix/src/: matrixMul.cu  matrixMulCUBLAS.cu
eus_cuda_matrix/src/test/: test_matrixMul.c  test_matrixMulCUBLAS.c
previous/: activations.l
